# phd-thesis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  _config.yml  _toc.yml  constrained.md  package-lock.json  pyproject.toml  references.bib  todo.md
.github/workflows/: build-and-deploy.yml
content/: 0000-abstract.ipynb  0000-abstract.md  0000-preamble.ipynb  01-introduction.ipynb  10-experiment.ipynb  1000-acknowledgements.ipynb  1000-acknowledgements.md  1000-preface.ipynb  1000-quote.ipynb  1003-acknowledgements.ipynb  11-nuclear-models.ipynb  12-experimental-scattering.ipynb  13-track-finding-and-fitting.ipynb  14-texat-tpc.ipynb  15-10c-4he-experiment.ipynb  1999-introduction.md  20-olab-online-laboratory.ipynb  2100-hf-notes.ipynb  2100-nuclear-models.ipynb  2100-nuclear-models.md  2200-carbon-oxygen-14.ipynb  2200-carbon-oxygen-14.md  2300-experimental-scattering.ipynb  2300-experimental-scattering.md  2300-track-finding-and-fitting.ipynb  2400-texat-tpc.ipynb  2400-texat-tpc.md  2400-track-finding-and-fitting.ipynb  2500-10c-4he-experiment.ipynb  2500-texat-tpc.ipynb  2500-track-finding-and-fitting.md  2501-partitioning.ipynb  2502-noise-and-baseline-removal.ipynb  2503-response-estimation.ipynb  2504-gain-matching.ipynb  2505-signal-fitting.ipynb  2506-signal-ringing.ipynb  2507-silicon-calibration.ipynb  2508-garfield-simulation.ipynb  2508-gas-simulation.ipynb  (+75 more)
content/data/: 1-pearl-greedy.parquet  1-ransac-greedy.parquet  10C-in-4He-CO2-MSTAR.csv  10C-in-4He-CO2.csv  1H-in-4He-CO2.csv  2-pearl-greedy.parquet  2-ransac-greedy.parquet  3-pearl-greedy.parquet  3-ransac-greedy.parquet  4-pearl-greedy.parquet  4-ransac-greedy.parquet  4He-in-4He-CO2.csv  GET-event.h5  angular-energy-vertex.pickle  avalanche-0.json  avalanche-1.json  avalanche-2.json  avalanche-3.json  avalanche-4.json  avalanche-5.json  avalanche-6.json  avalanche-7.json  avalanche-8.json  avalanche-9.json  beam-energy-delta.pickle  beam-origin.json  calibration-heatmap.pickle  calibration.h5  cluster-fit.h5  cluster.h5  correlations-hist.pickle  dE-dx-10C-in-4He-CO2.csv  dE-dx-4He-in-4He-CO2.csv  de-dx-beam-mstar.pickle  de-dx-beam.pickle  de-dx-silicon.pickle  event-0-256.parquet  excitation-function.pickle  fit-cost.npy  forward-hit-map-non-central.pickle  (+22 more)
content/image/placeholder/: .gitattributes  atomic-molecular-orbitals.xcf
content/model/: cesium.json  micromegas.json  silicon.json
content/olab-analytics/notebook-sessions/: record-000478f74b9ee8880306817566fde7b1.json  record-002585ec892c5e3e85e721fd7a7e9464.json  record-002aeeb1ba17edf28f130c82dea389a9.json  record-0077272f4164e990d918606ed535d0f1.json  record-00a485f13f65863e57041b974523d25a.json  record-00b832265fa69234d85f337ac205abc5.json  record-00d68aaec329a944138a4a836ee5d711.json  record-00e5c30912d1f24e48562aa8160e2c2e.json  record-00ea956826279a4a7d9d5defa66c5f42.json  record-0122d86228cc712cb56ba28de8e213e1.json  record-01367106ae475b9af7089a0169b4ae7f.json  record-01716576d2b02a39d55d3ac112127723.json  record-01755caf69041224ebba6383c8a8ed39.json  record-0182e01bad10801b6b9d949fab072323.json  record-01b0823d1951691992310a349243e308.json  record-01d36aec77c26589cad605e05ff23285.json  record-01d4a29bb767a8336e26b25de1c0ae38.json  record-02069fc9e8254f9ef7f82694fdcfb596.json  record-023f92a309aeb7513f6fd96bc225ae6a.json  record-02649d5c6fa2c4946eab2c5c0b21e360.json  record-02729af48fcc0fc0cbbc2130b6c8e6a8.json  record-02bc933427993a483dbc4fde4a40698e.json  record-02cf8b2718d8ff7e417973a7717500e1.json  record-02f6bec0f444799734aa19773baf44b6.json  record-032600b2cca317bd23989804b3a83c3c.json  record-033de506cd0f46bfb6eba8fb2a70e7ea.json  record-038b63e0cf6b79d79e3609b95f634084.json  record-03ac91df69aec1077b5d37243eb91a8b.json  record-03b37aed679f40e12c5eb601cfbc49cf.json  record-03b597fd35d11c3f6fb32efae98b74c0.json  record-03c52b727b2e4e4025797720018d0ba2.json  record-03caaa8ef68ea80dbdab3c1aeba76a26.json  record-03f07a5041e235c73188bbb8844716b8.json  record-03f504670f1bb6be59fea59bcf945fd4.json  record-048604e56c0eab33fb32934f329c0f4f.json  record-04d64c896d29a88b865d5df132950708.json  record-05c0493d0276633f5f45c31dbd0caf93.json  record-0633360bad7d7717b5569ed1c56bb72a.json  record-0661817a98c4d26739867eec18e63f5c.json  record-070072e4d7d5d9937d71df43cd25524c.json  (+1290 more)
content/olab-analytics/server-sessions/: record-00bea086d83b603db20e23b6ff80d616.json  record-01549b521cfb420b386eaded9214a389.json  record-028a0dcd995022f5d0ec604426ac3112.json  record-0344dcc3fc9b288edbd02c1952b716c9.json  record-03a61b7579ef47615553f580ab16164d.json  record-03b1fe039f9d1b84dabc8c3cfca6130e.json  record-0430c7967d975158365f352d3a067a18.json  record-0558493a9ab5fe0183c8535b3af4071f.json  record-0730b4378c78be115153e1144b0ccf9d.json  record-07dfb7a1f7e02c585755f67bd75cddd2.json  record-082cd4d835ee0f25debaa92ce42631d9.json  record-083e411db16938c0af47a34dfd84b290.json  record-093c18f6f0edb6391743bcd24b0118f7.json  record-09b86127e2800efd81e9f02fda03eeae.json  record-0aa66cdd5e04acbfae448b387e8eb4e3.json  record-0bfe3b50c6bd5afc458f07f4004b4685.json  record-0d3e3ce0de612d9e7630d2b68b3cbbae.json  record-0de4616f845be8678e6deb66fc8ae75c.json  record-0e3b2c55c7631879b7726a9e9c7cbbb6.json  record-0e52f48acdc23ba11fa6811fd8378751.json  record-0eb2640c31db6ef560bf1ff4e64a8d75.json  record-0eebbbbfe5d2cf956ea1ca3505ace78f.json  record-0fb29b766973e88e246f6ff8fa1b4b6f.json  record-0fe75ffc6fb983ff842fb952355c1b9b.json  record-100dbc248682724b5dad11b501d1754a.json  record-11a8c8b9b73fa7842a0798f6d5024d23.json  record-1232ce7d751c0dfe299f8a4d148bcffb.json  record-12464956757995906937a5a89ce167ac.json  record-1263063cd811e6961f310cbdae200999.json  record-129546ddf7c62d432e030b3a3a60f707.json  record-12b0ad50855e9d896401fbe970619fd6.json  (+369 more)
ext/: mermaid.py  policy.py
scripts/: build  disable-mystjs  enable-mystjs  unique-unicode-symbols
sphinx-ext/: caption_after_table.py  hide_builder_classes.py  hide_dropdowns.py  load_mermaid.py  mermaid.py  policy.py
sphinx-ext/_templates/: tabular.tex_t  tabulary.tex_t
