[project]
name = "thesis"
version = "0.0.1"
description = ""
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
dependencies = [
    # Book
    "jupyter-book>=0.15.0",
    "docutils<0.18.0",
    # Interact
    "matplotlib>=3.5.0",
    "mplhep>=0.3.15",
    "ipympl>=0.8.2",
    "ipywidgets>=7.6.5",
    "sidecar>=0.5.1",
    "numpy-html>=1.0.0",
    "k3d>=2.13.0",
    # Lint
    "black>=21.11b1",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    # Editor
    "JLDracula>=0.1.0",
    "python-lsp-server>=1.3",
    "jupyterlab-myst >=1",
    "jupyterlab-code-formatter>=1.4.10",
    "jupyterlab-lsp>=3.9",
    "jupyterlab-unfold>=0.1.6",
    "jupyterlab>=3.2.4",
    "jupyterlab-spellchecker>=0.7.2",
    "jupytext>=1.13.8",
    "jupyterlab-git>=0.37.1",
    # Kernel
    "ipython<8",
    # Other
    "nbdime>=3.1.1",
    "not-dead-yet>=0.4.0",
    "sphinxcontrib-mermaid @ file:///${PROJECT_ROOT}/extern/sphinxcontrib_mermaid-0.7.1-py3-none-any.whl",
    "hist>=2.6.1",
    "pyppeteer>=1.0.2",
    "iminuit>=2.11.2",
    # "sphinx-jupyterbook-latex>=0.5",
    "graphviz>=0.20",
    "sphinxcontrib-svg2pdfconverter>=1.2.0",
    "mdformat-myst>=0.1.5",
    "altair>=4.2.0,<5",
    "altair-saver>=0.5.0",
    "pandas>=1.5.1",
    "sphinx-subfigure>=0.2.4",
    "particle>=0.21.2",
    "texat @ file:///${PROJECT_ROOT}/extern/texat-0.3.1-py3-none-any.whl",
    "myst-nb @ file:///${PROJECT_ROOT}/extern/myst_nb-0.17.1-py3-none-any.whl",
    "selenium<4.3.0",
]


[tool.black]
line-length = 88
target-version = ['py39'] # py39
include = '\.pyi?$'
exclude = "extern"

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.jupytext]
formats = "md:myst"
cell_metadata_filter = "-user_expressions"
# [tool.pdm.overrides]
# myst-nb = "file:///${PROJECT_ROOT}/extern/myst_nb-0.17.1-py3-none-any.whl"  # Newer version
# sphinx-jupyterbook-latex = "0.5.1"
# myst-parser = "0.18.0"  # Newer version
# jupyter-cache = "0.5.0" # Newer version
# mdit-py-plugins = "0.3.0"
# jupyter-book = "0.13.0"
# sphinx-external-toc = "0.2.4"
